fix overflows

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -6,12 +6,10 @@ html, body, main {
 	-webkit-touch-callout: none;
 	-webkit-overflow-scrolling: touch;
 }
-
-/* 
+ 
 button {
    user-select: none;
-} 
-*/
+}
 
 main {
 	display: grid;
@@ -26,9 +24,10 @@ figure {
 	border-radius: 1rem;
 	border-style: solid;
 	border-width: 0.1rem;
+	max-width: 14rem;
 }
 
-/*figure>img {
-	max-height: 15rem;
+figure>img {
+	max-height: 20rem;
+	max-width: inherit;
 }
-*/
